--- a/content.html
+++ b/content.html
@@ -3,8 +3,10 @@
   <header class="hero-header">
     <div class="container">
       <div class="branding-wrap">
-        <p class="logo-introducing">Introducing</p><a href="/" class="canvs-logo-link"><img src="images/logos/canvs-logo-white.svg" class="canvs-logo"/></a>
-      </div>
+        <p class="logo-introducing">Introducing</p><a href="/" class="canvs-logo-link"><img src="images/logos/canvs-logo-white.svg" class="canvs-logo"/>
+          <div class="powered-by-wrap"><span class="powered-by">powered by</span><img src="images/logos/mashwork-logo-white-red.svg" class="mashwork-logo"/></div></a>
+      </div><a class="video-play-btn"></a>
+      <h1 class="site-header">The next generation in social TV analytics.</h1><a class="learn-more-btn">Learn more</a>
     </div>
   </header>
 </div>
