--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
         <link rel="stylesheet" href="/style/css/style.css">
 
+        <script type="text/javascript" src="//use.typekit.net/nxm7llc.js"></script>
+        <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
         <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
@@ -26,8 +28,10 @@
   <header class="hero-header">
     <div class="container">
       <div class="branding-wrap">
-        <p class="logo-introducing">Introducing</p><a href="/" class="canvs-logo-link"><img src="images/logos/canvs-logo-white.svg" class="canvs-logo"/></a>
-      </div>
+        <p class="logo-introducing">Introducing</p><a href="/" class="canvs-logo-link"><img src="images/logos/canvs-logo-white.svg" class="canvs-logo"/>
+          <div class="powered-by-wrap"><span class="powered-by">powered by</span><img src="images/logos/mashwork-logo-white-red.svg" class="mashwork-logo"/></div></a>
+      </div><a class="video-play-btn"></a>
+      <h1 class="site-header">The next generation in social TV analytics.</h1><a class="learn-more-btn">Learn more</a>
     </div>
   </header>
 </div>
