--- a/content.html
+++ b/content.html
@@ -11,16 +11,18 @@
   </header>
   <section class="about-canvs-section">
     <div class="container">
-      <header class="section-header-wrap">
-        <h1 class="section-header">Nuanced insights, completely automated.</h1>
-      </header>
-      <div class="content-box about-canvs-box stop-counting"><img src="images/stop-counting.svg" class="about-canvs-illustration"/>
-        <h2>Stop counting.<br>Start understanding.</h2>
-        <p>You know how many people are talking about your show, but only Canvs can automatically tell you what they’re feeling. Spend your time building fascinating insights, not wading through Tweets.</p>
-      </div>
-      <div class="content-box about-canvs-box forget-sentiment"><img src="images/forget-sentiment.svg" class="about-canvs-illustration"/>
-        <h2>Forget sentiment.<br>Discover meaning.</h2>
-        <p>We know that social media sentiment tools suck because we’ve used them all. We don’t even believe in positive, negative, and neutral sentiment. Canvs uncovers nuanced audience emotions and lets you decide what they mean for your show.</p>
+      <div class="row">
+        <header class="section-header-wrap">
+          <h1 class="section-header">Nuanced insights, completely automated.</h1>
+        </header>
+        <div class="content-box about-canvs-box stop-counting"><img src="images/stop-counting.svg" class="about-canvs-illustration"/>
+          <h2>Stop counting.<br>Start understanding.</h2>
+          <p>You know how many people are talking about your show, but only Canvs can automatically tell you what they’re feeling. Spend your time building fascinating insights, not wading through Tweets.</p>
+        </div>
+        <div class="content-box about-canvs-box forget-sentiment"><img src="images/forget-sentiment.svg" class="about-canvs-illustration"/>
+          <h2>Forget sentiment.<br>Discover meaning.</h2>
+          <p>We know that social media sentiment tools suck because we’ve used them all. We don’t even believe in positive, negative, and neutral sentiment. Canvs uncovers nuanced audience emotions and lets you decide what they mean for your show.</p>
+        </div>
       </div><a href="/" class="action-btn request-demo-btn">Request a Demo</a>
     </div>
   </section>
@@ -34,24 +36,59 @@
   </section>
   <section class="actionable-insights-section">
     <div class="container">
-      <header class="section-header-wrap">
-        <h1 class="section-header">Actionable insights for the TV ecosystem.</h1>
-      </header>
-      <div class="content-box actionable-insights-box">
-        <div class="icon-circle"><img src="images/marketing-icon.svg" class="actionable-insights-illustration"/></div>
-        <h2>Marketing</h2>
-        <p>You know how many people are talking about your show, but only Canvs can automatically tell you what they’re feeling. </p>
+      <div class="row">
+        <header class="section-header-wrap">
+          <h1 class="section-header">Actionable insights for the TV ecosystem.</h1>
+        </header>
+        <div class="content-box actionable-insights-box">
+          <div class="icon-circle"><img src="images/marketing-icon.svg" class="actionable-insights-illustration"/></div>
+          <h2>Marketing</h2>
+          <p>You know how many people are talking about your show, but only Canvs can automatically tell you what they’re feeling. </p>
+        </div>
+        <div class="content-box actionable-insights-box">
+          <div class="icon-circle"><img src="images/adsales-icon.svg" class="actionable-insights-illustration"/></div>
+          <h2>Ad Sales</h2>
+          <p>Use Canvs to identify what other brands your most engaged audience loves. Then get to work selling super effective spots and integrations. </p>
+        </div>
+        <div class="content-box actionable-insights-box">
+          <div class="icon-circle"><img src="images/production-icon.svg" class="actionable-insights-illustration"/></div>
+          <h2>Production</h2>
+          <p>Use Canvs to get feedback in real time. Know immediately if that joke in the third act landed and if viewers hate the new villain as much as you want them to.</p>
+        </div>
+      </div><a href="/" class="action-btn get-started-btn">Get started with Canvs</a>
+    </div>
+  </section>
+  <section class="single-solution-section">
+    <div class="container">
+      <div class="row">
+        <header class="section-header-wrap">
+          <h1 class="section-header">A single solution for everything you want.</h1>
+        </header>
+        <div class="content-box single-solution-box immediate-box"><img src="images/immediate-icon.svg" class="single-solution-illustration"/>
+          <h2>Immediate</h2>
+          <p><strong>No more settling for shaky sentiment. </strong>No more hours manually calculating it yourself. Canvs gives you immediate, actionable insights about how your audience feels with the click of a mouse.</p>
+        </div>
+        <div class="content-box single-solution-box credible-box"><img src="images/credible-icon.svg" class="single-solution-illustration"/>
+          <h2>Credible</h2>
+          <p><strong>Our pedigree speaks for itself: </strong>Canvs was built by New York City’s best social TV analysts and data scientists as a tool for themselves. See what it can do for you. </p>
+        </div>
       </div>
-      <div class="content-box actionable-insights-box">
-        <div class="icon-circle"><img src="images/adsales-icon.svg" class="actionable-insights-illustration"/></div>
-        <h2>Ad Sales</h2>
-        <p>Use Canvs to identify what other brands your most engaged audience loves. Then get to work selling super effective spots and integrations. </p>
+      <div class="row">
+        <div class="content-box single-solution-box transparent-box"><img src="images/transparent-icon.svg" class="single-solution-illustration"/>
+          <h2>Transparent</h2>
+          <p><strong>Canvs gives you visibility into all conversation </strong>so you can see that Canvs is really as good at categorizing reactions as we say it is. Trust Us. (Or Don’t.)</p>
+        </div>
+        <div class="content-box single-solution-box credible-box"><img src="images/beautiful-icon.svg" class="single-solution-illustration"/>
+          <h2>Beautiful</h2>
+          <p><strong>Gone are crowded dashboards and illegible charts. </strong>Canvs is clean, intuitive, and fun to use.</p>
+        </div>
       </div>
-      <div class="content-box actionable-insights-box">
-        <div class="icon-circle"><img src="images/production-icon.svg" class="actionable-insights-illustration"/></div>
-        <h2>Production</h2>
-        <p>Use Canvs to get feedback in real time. Know immediately if that joke in the third act landed and if viewers hate the new villain as much as you want them to.</p>
-      </div>
+      <div class="row">
+        <div class="content-box single-solution-box intelligent-box"><img src="images/intelligent-icon.svg" class="single-solution-illustration"/>
+          <h2>Intelligent</h2>
+          <p><strong>Canvs gives you visibility into all conversation </strong>so you can see that Canvs is really as good at categorizing reactions as we say it is. Trust Us. (Or Don’t.)</p>
+        </div>
+      </div><a href="/" class="action-btn info-sheet-btn">Canvs Info Sheet</a>
     </div>
   </section>
 </div>
