--- a/content.html
+++ b/content.html
@@ -91,4 +91,13 @@
       </div><a href="/" class="action-btn info-sheet-btn">Canvs Info Sheet</a>
     </div>
   </section>
+  <footer class="page-footer">
+    <ul class="social-links">
+      <li class="twitter-link"><a href="https://www.twitter.com/mashwork"><img src="images/twitter-icon.svg" class="social-icon"/></a></li>
+      <li class="facebook-link"><a href="https://www.facebook.com/mashwork"><img src="images/facebook-icon.svg" class="social-icon"/></a></li>
+      <li class="linkedin-link"><a href="https://www.linkedin.com/company/mashwork"><img src="images/linkedin-icon.svg" class="social-icon"/></a></li>
+    </ul>
+    <p class="copyright">&copy; 2014 Mashwork, Inc. &nbsp;•&nbsp; All rights reserved. &nbsp;•&nbsp; <a href="/privacy">Privacy Policy</a></p>
+    <p class="contact-info"><a href="https://goo.gl/maps/slKfo">11 W. 25th St, 7th Fl, New York, NY 10010</a>• <a href="tel:1-646-201-9124">646-201-9124</a>• <a href="/about">About Us </a>• <a href="http://mashwork.com/blog">News</a></p>
+  </footer>
 </div>
