--- a/content.html
+++ b/content.html
@@ -2,11 +2,13 @@
 <div class="content">
   <header class="hero-header">
     <div class="container">
-      <div class="branding-wrap">
-        <p class="logo-introducing">Introducing</p><a href="/" class="canvs-logo-link"><img src="images/logos/canvs-logo-white.svg" class="canvs-logo"/>
-          <div class="powered-by-wrap"><span class="powered-by">powered by</span><img src="images/logos/mashwork-logo-white-red.svg" class="mashwork-logo"/></div></a>
-      </div>
-      <h1 class="site-header">The next generation in social TV analytics.</h1><a href="/" class="video-play-btn"><img src="images/play-btn-triangle.svg" class="play-btn-triangle"/></a><a href="/" class="action-btn learn-more-btn">Learn More</a>
+      <div class="hero-header-content">
+        <div class="branding-wrap">
+          <p class="logo-introducing">Introducing</p><a href="/" class="canvs-logo-link"><img src="images/logos/canvs-logo-white.svg" class="canvs-logo"/>
+            <div class="powered-by-wrap"><span class="powered-by">powered by</span><img src="images/logos/mashwork-logo-white-red.svg" class="mashwork-logo"/></div></a>
+        </div>
+        <h1 class="site-header">The next generation in social TV analytics.</h1><a href="/" class="video-play-btn"><img src="images/play-btn-triangle.svg" class="play-btn-triangle"/></a>
+      </div><a href="/" class="action-btn learn-more-btn">Learn More</a>
     </div>
   </header>
   <section class="about-canvs-section">
