--- a/content.html
+++ b/content.html
@@ -1,6 +1,6 @@
 
 <div class="content">
-  <header class="hero-header">
+  <header class="hero-header"><a href="http://canvs.tv/login" class="canvs-login">Login<span class="login-icon"><img src="images/user-icon.svg"/></span></a>
     <div class="container">
       <div class="hero-header-content">
         <div class="branding-wrap">
@@ -95,11 +95,11 @@
   </section>
   <footer class="page-footer">
     <ul class="social-links">
-      <li class="twitter-link"><a href="https://www.twitter.com/mashwork"><img src="images/twitter-icon.svg" class="social-icon"/></a></li>
-      <li class="facebook-link"><a href="https://www.facebook.com/mashwork"><img src="images/facebook-icon.svg" class="social-icon"/></a></li>
-      <li class="linkedin-link"><a href="https://www.linkedin.com/company/mashwork"><img src="images/linkedin-icon.svg" class="social-icon"/></a></li>
+      <li class="twitter-link"><a href="https://www.twitter.com/mashwork" target="_blank"><img src="images/twitter-icon.svg" class="social-icon"/></a></li>
+      <li class="facebook-link"><a href="https://www.facebook.com/mashwork" target="_blank"><img src="images/facebook-icon.svg" class="social-icon"/></a></li>
+      <li class="linkedin-link"><a href="https://www.linkedin.com/company/mashwork" target="_blank"><img src="images/linkedin-icon.svg" class="social-icon"/></a></li>
     </ul>
-    <p class="copyright">&copy; 2014 Mashwork, Inc. &nbsp;•&nbsp; All rights reserved. &nbsp;•&nbsp; <a href="/privacy">Privacy Policy</a></p>
-    <p class="contact-info"><a href="https://goo.gl/maps/slKfo">11 W. 25th St, 7th Fl, New York, NY 10010</a>• <a href="tel:1-646-201-9124">646-201-9124</a>• <a href="/about">About Us </a>• <a href="http://mashwork.com/blog">News</a></p>
+    <p class="copyright">&copy; 2014 Mashwork, Inc. &nbsp;•&nbsp; All rights reserved. &nbsp;•&nbsp; <a href="/privacy" target="_blank">Privacy Policy</a></p>
+    <p class="contact-info"><a href="https://goo.gl/maps/slKfo" target="_blank">11 W. 25th St, 7th Fl, New York, NY 10010</a>• <a href="tel:1-646-201-9124">646-201-9124</a>• <a href="/about">About Us </a>• <a href="http://mashwork.com/blog">News</a></p><a href="http://wearemadeinny.com/" class="made-in-ny"><img src="images/logos/made-in-ny-logo.svg"/></a>
   </footer>
 </div>
