Finished about page content

--- a/about/index.html
+++ b/about/index.html
@@ -23,7 +23,7 @@
     <![endif]-->
 
     
-<div class="content about-content">
+<div class="about-content">
   <header class="hero-header"><a href="http://canvs.tv/login" class="canvs-login">Login<span class="login-icon"><img src="images/user-icon.svg"/></span></a>
     <div class="container">
       <div class="hero-header-content">
@@ -34,17 +34,17 @@
         <h1 class="site-header">Core Beliefs</h1>
       </div>
       <div class="row">
-        <div class="content-box core-beliefs-box">
+        <div class="content-box core-beliefs-box context">
           <div class="icon-circle"><img src="images/context-icon.svg" class="core-beliefs-illustration"/></div>
           <h2>Context</h2>
           <p>Social marketers and researchers are no longer content simply counting mentions: social becomes a powerful insights tool only when we can understand the context of conversations.</p>
         </div>
-        <div class="content-box core-beliefs-box">
+        <div class="content-box core-beliefs-box emotion">
           <div class="icon-circle"><img src="images/emotion-icon.svg" class="core-beliefs-illustration"/></div>
           <h2>Emotion</h2>
           <p>Canvs layers the emotional graph on top of the social graph to reveal context behind social conversations. We believe that understanding how audiences emotionally relate to content is the first step in building a meaningful relationship with them. </p>
         </div>
-        <div class="content-box core-beliefs-box">
+        <div class="content-box core-beliefs-box nuance">
           <div class="icon-circle"><img src="images/nuance-icon.svg" class="core-beliefs-illustration"/></div>
           <h2>Nuance</h2>
           <p>Entertainment content is complex—that’s why we don’t believe in positive, negative, and neutral sentiment. Canvs uncovers nuanced audience emotions and lets you decide what they mean for your show.</p>
@@ -55,24 +55,67 @@
   <section class="canvs-origins-section">
     <div class="container">
       <div class="row">
-        <header class="section-header-wrap">
-          <h1 class="section-header">Canvs Origins</h1>
-          <p class="section-description">Since 2010, Mashwork analysts have been delivering reports to the world’s top brands.<br>Our observations led us to creating Canvs and assure us it’s a compelling tool. </p>
-        </header>
         <div class="canvs-origins-box">
+          <header class="section-header-wrap">
+            <h1 class="section-header">Canvs Origins</h1>
+            <p class="section-description">Since 2010, Mashwork analysts have been delivering reports to the world’s top brands. Our observations led us to creating Canvs and assure us it’s a compelling tool. </p>
+          </header>
           <div class="row">
             <div class="content-box jared"><img src="images/team/jared.jpg" class="canvs-origins-image"/>
               <h2>Jared Feldman</h2>
+              <h3>Founder &amp; CEO</h3>
             </div>
             <div class="content-box sam"><img src="images/team/sam.jpg" class="canvs-origins-image"/>
-              <h2>Sam Hui</h2>
+              <h2>Sam Hui, PhD</h2>
+              <h3>Chief Scientist</h3>
             </div>
           </div>
+          <p>Mashwork was established in 2010 by entrepreneur Jared Feldman and Stern School of Business professor, Sam Hui, PhD. We excel in synthesizing data from countless best-in-class tools to deliver actionable insights.</p>
+          <p>Canvs&#8482;, Mashwork’s proprietary social TV analytics platform, provides scalable measurement and qualitative analysis of Twitter reactions to entertainment content. Our technology is based on years of R&amp;D, and was tested in private beta with top content providers like Viacom and Time Warner.</p>
+        </div>
+      </div><a href="/" class="action-btn learn-services-btn">Learn About Services</a>
+    </div>
+  </section>
+  <section class="canvs-advisors-section">
+    <div class="container">
+      <header class="section-header-wrap">
+        <h1 class="section-header">Advisors</h1>
+      </header>
+      <div class="row">
+        <div class="content-box stephen-gatfield"><img src="images/advisors/stephen-gatfield.jpg" class="canvs-advisors-image"/>
+          <h2>Stephen Gatfield</h2>
+          <h3>Marcoms Strategist &amp; Investor</h3>
+        </div>
+        <div class="content-box michoel-ogince"><img src="images/advisors/michoel-ogince.jpg" class="canvs-advisors-image"/>
+          <h2>Michoel Ogince</h2>
+          <h3>Founding Partner at Windforce Ventures</h3>
+        </div>
+        <div class="content-box shaula-yemini"><img src="images/advisors/shaula-yemini.jpg" class="canvs-advisors-image"/>
+          <h2>Shaula Yemini, PhD</h2>
+          <h3>Technical Advisor</h3>
         </div>
       </div>
     </div>
   </section>
+  <section class="join-us-section">
+    <div class="container">
+      <header class="section-header-wrap">
+        <h1 class="section-header">Join Us</h1>
+        <p class="section-description">View our current openings.</p>
+      </header><a href="/" class="action-btn apply-now-btn">Apply Now</a>
+    </div>
+  </section>
 </div>
+    
+<footer class="page-footer">
+  <ul class="social-links">
+    <li class="twitter-link"><a href="https://www.twitter.com/mashwork" target="_blank"><img src="images/twitter-icon.svg" class="social-icon"/></a></li>
+    <li class="facebook-link"><a href="https://www.facebook.com/mashwork" target="_blank"><img src="images/facebook-icon.svg" class="social-icon"/></a></li>
+    <li class="linkedin-link"><a href="https://www.linkedin.com/company/mashwork" target="_blank"><img src="images/linkedin-icon.svg" class="social-icon"/></a></li>
+  </ul>
+  <p class="copyright">&copy; 2014 Mashwork, Inc. &nbsp;•&nbsp; All rights reserved. &nbsp;•&nbsp; <a href="/privacy" target="_blank">Privacy Policy</a></p>
+  <p class="contact-info"><a href="https://goo.gl/maps/slKfo" target="_blank">11 W. 25th St, 7th Fl, New York, NY 10010</a>• <a href="tel:1-646-201-9124">646-201-9124</a>• <a href="/about">About Us </a>• <a href="http://mashwork.com/blog">News</a></p><a href="http://wearemadeinny.com/" class="made-in-ny"><img src="images/logos/made-in-ny-logo.svg"/></a>
+</footer>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="bower_components/html5-boilerplate/js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
     <script src="scripts/min/main-min.js"></script>
