Added a contact modal

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <div class="powered-by-wrap"><span class="powered-by">powered by</span><img src="images/logos/mashwork-logo-white-red.svg" class="mashwork-logo"/></div></a>
       </div>
       <h1 class="site-header">The next generation in social TV analytics.</h1><a href="/" class="video-play-btn"><img src="images/play-btn-triangle.svg" class="play-btn-triangle"/></a>
-    </div><a href="/" class="action-btn learn-more-btn">Learn More</a>
+    </div><a data-toggle="modal" data-target=".contactModal" class="action-btn learn-more-btn">Learn More</a>
   </div>
 </header>
 <section class="about-canvs-section">
@@ -117,6 +117,21 @@
     </div><a href="/" class="action-btn info-sheet-btn">Canvs Info Sheet</a>
   </div>
 </section>
+<div tabindex="-1" role="dialog" aria-labelledby="contactModalTitle" aria-hidden="true" class="contactModal modal fade">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" data-dismiss="modal" aria-hidden="true" class="close">×</button>
+        <h1 id="contactModalTitle" class="modal-title">Contact us for a Canvs demo.</h1>
+        <p class="section-description">All fields are mandatory.</p>
+      </div>
+      <div class="modal-body">...</div>
+      <div class="modal-footer">
+        <button type="button" class="action-btn submit-demo-request-btn">Request demo</button>
+      </div>
+    </div>
+  </div>
+</div>
     
 <footer class="page-footer">
   <ul class="social-links">
