--- a/about/about-content.html
+++ b/about/about-content.html
@@ -1,27 +1,27 @@
 
 <div class="about-content">
-  <header class="hero-header"><a href="http://canvs.tv/login" class="canvs-login">Login<span class="login-icon"><img src="images/user-icon.svg"/></span></a>
+  <header class="hero-header"><a href="http://canvs.tv/login" class="canvs-login">Login<span class="login-icon"><img src="../images/user-icon.svg"/></span></a>
     <div class="container">
       <div class="hero-header-content">
         <div class="branding-wrap">
-          <p class="logo-introducing">Introducing</p><a href="/" class="canvs-logo-link"><img src="images/logos/canvs-logo-white.svg" class="canvs-logo"/>
-            <div class="powered-by-wrap"><span class="powered-by">powered by</span><img src="images/logos/mashwork-logo-white-red.svg" class="mashwork-logo"/></div></a>
+          <p class="logo-introducing">Introducing</p><a href="/" class="canvs-logo-link"><img src="../images/logos/canvs-logo-white.svg" class="canvs-logo"/>
+            <div class="powered-by-wrap"><span class="powered-by">powered by</span><img src="../images/logos/mashwork-logo-white-red.svg" class="mashwork-logo"/></div></a>
         </div>
         <h1 class="site-header">Core Beliefs</h1>
       </div>
       <div class="row">
         <div class="content-box core-beliefs-box context">
-          <div class="icon-circle"><img src="images/context-icon.svg" class="core-beliefs-illustration"/></div>
+          <div class="icon-circle"><img src="../images/context-icon.svg" class="core-beliefs-illustration"/></div>
           <h2>Context</h2>
           <p>Social marketers and researchers are no longer content simply counting mentions: social becomes a powerful insights tool only when we can understand the context of conversations.</p>
         </div>
         <div class="content-box core-beliefs-box emotion">
-          <div class="icon-circle"><img src="images/emotion-icon.svg" class="core-beliefs-illustration"/></div>
+          <div class="icon-circle"><img src="../images/emotion-icon.svg" class="core-beliefs-illustration"/></div>
           <h2>Emotion</h2>
           <p>Canvs layers the emotional graph on top of the social graph to reveal context behind social conversations. We believe that understanding how audiences emotionally relate to content is the first step in building a meaningful relationship with them. </p>
         </div>
         <div class="content-box core-beliefs-box nuance">
-          <div class="icon-circle"><img src="images/nuance-icon.svg" class="core-beliefs-illustration"/></div>
+          <div class="icon-circle"><img src="../images/nuance-icon.svg" class="core-beliefs-illustration"/></div>
           <h2>Nuance</h2>
           <p>Entertainment content is complex—that’s why we don’t believe in positive, negative, and neutral sentiment. Canvs uncovers nuanced audience emotions and lets you decide what they mean for your show.</p>
         </div>
@@ -37,11 +37,11 @@
             <p class="section-description">Since 2010, Mashwork analysts have been delivering reports to the world’s top brands. Our observations led us to creating Canvs and assure us it’s a compelling tool. </p>
           </header>
           <div class="row">
-            <div class="content-box jared"><img src="images/team/jared.jpg" class="canvs-origins-image"/>
+            <div class="content-box jared"><img src="../images/team/jared.jpg" class="canvs-origins-image"/>
               <h2>Jared Feldman</h2>
               <h3>Founder &amp; CEO</h3>
             </div>
-            <div class="content-box sam"><img src="images/team/sam.jpg" class="canvs-origins-image"/>
+            <div class="content-box sam"><img src="../images/team/sam.jpg" class="canvs-origins-image"/>
               <h2>Sam Hui, PhD</h2>
               <h3>Chief Scientist</h3>
             </div>
@@ -58,15 +58,15 @@
         <h1 class="section-header">Advisors</h1>
       </header>
       <div class="row">
-        <div class="content-box stephen-gatfield"><img src="images/advisors/stephen-gatfield.jpg" class="canvs-advisors-image"/>
+        <div class="content-box stephen-gatfield"><img src="../images/advisors/stephen-gatfield.jpg" class="canvs-advisors-image"/>
           <h2>Stephen Gatfield</h2>
           <h3>Marcoms Strategist &amp; Investor</h3>
         </div>
-        <div class="content-box michoel-ogince"><img src="images/advisors/michoel-ogince.jpg" class="canvs-advisors-image"/>
+        <div class="content-box michoel-ogince"><img src="../images/advisors/michoel-ogince.jpg" class="canvs-advisors-image"/>
           <h2>Michoel Ogince</h2>
           <h3>Founding Partner at Windforce Ventures</h3>
         </div>
-        <div class="content-box shaula-yemini"><img src="images/advisors/shaula-yemini.jpg" class="canvs-advisors-image"/>
+        <div class="content-box shaula-yemini"><img src="../images/advisors/shaula-yemini.jpg" class="canvs-advisors-image"/>
           <h2>Shaula Yemini, PhD</h2>
           <h3>Technical Advisor</h3>
         </div>
