--- a/footer.html
+++ b/footer.html
@@ -1,10 +1,10 @@
 
 <footer class="page-footer">
   <ul class="social-links">
-    <li class="twitter-link"><a href="https://www.twitter.com/mashwork" target="_blank"><img src="images/twitter-icon.svg" class="social-icon"/></a></li>
-    <li class="facebook-link"><a href="https://www.facebook.com/mashwork" target="_blank"><img src="images/facebook-icon.svg" class="social-icon"/></a></li>
-    <li class="linkedin-link"><a href="https://www.linkedin.com/company/mashwork" target="_blank"><img src="images/linkedin-icon.svg" class="social-icon"/></a></li>
+    <li class="twitter-link"><a href="https://www.twitter.com/mashwork" target="_blank"><img src="http://www.mashwork.com/canvs/images/twitter-icon.svg" class="social-icon"/></a></li>
+    <li class="facebook-link"><a href="https://www.facebook.com/mashwork" target="_blank"><img src="http://www.mashwork.com/canvs/images/facebook-icon.svg" class="social-icon"/></a></li>
+    <li class="linkedin-link"><a href="https://www.linkedin.com/company/mashwork" target="_blank"><img src="http://www.mashwork.com/canvs/images/linkedin-icon.svg" class="social-icon"/></a></li>
   </ul>
   <p class="copyright">&copy; 2014 Mashwork, Inc. &nbsp;•&nbsp; All rights reserved. &nbsp;•&nbsp; <a href="/privacy" target="_blank">Privacy Policy</a></p>
-  <p class="contact-info"><a href="https://goo.gl/maps/slKfo" target="_blank">11 W. 25th St, 7th Fl, New York, NY 10010</a>• <a href="tel:1-646-201-9124">646-201-9124</a>• <a href="/about">About Us </a>• <a href="http://mashwork.com/blog">News</a></p><a href="http://wearemadeinny.com/" class="made-in-ny"><img src="images/logos/made-in-ny-logo.svg"/></a>
+  <p class="contact-info"><a href="https://goo.gl/maps/slKfo" target="_blank">11 W. 25th St, 7th Fl, New York, NY 10010</a>• <a href="tel:1-646-201-9124">646-201-9124</a>• <a href="/canvs/about">About Us </a>• <a href="http://mashwork.com/blog">News</a></p><a href="http://wearemadeinny.com/" class="made-in-ny"><img src="http://www.mashwork.com/canvs/images/logos/made-in-ny-logo.svg"/></a>
 </footer>
