Added canvs info sheet

--- a/app/index.html
+++ b/app/index.html
@@ -39,9 +39,6 @@
 <section class="about-canvs-section">
   <div class="container">
     <div class="row">
-      <header class="section-header-wrap">
-        <h1 class="section-header">Nuanced insights, completely automated.</h1>
-      </header>
       <div class="content-box about-canvs-box stop-counting"><img src="images/stop-counting.svg" class="about-canvs-illustration"/>
         <h2>Stop counting.<br>Start understanding.</h2>
         <p>You know how many people are talking about your show, but only Canvs can automatically tell you what they’re feeling. Spend your time building fascinating insights, not wading through Tweets.</p>
@@ -117,7 +114,7 @@
         <h2>Intelligent</h2>
         <p><strong>Canvs gives you visibility into all conversation </strong>so you can see that Canvs is really as good at categorizing reactions as we say it is. Trust Us. (Or Don’t.)</p>
       </div>
-    </div><a href="/" class="action-btn info-sheet-btn">Canvs Info Sheet</a>
+    </div><a href="/files/Canvs_Info_Sheet.pdf" class="action-btn info-sheet-btn">Canvs Info Sheet</a>
   </div>
 </section>
 <div tabindex="-1" role="dialog" aria-labelledby="contactModalTitle" aria-hidden="true" class="contactModal modal fade">
