Fixes and whatnot

--- a/app/about/index.html
+++ b/app/about/index.html
@@ -11,7 +11,7 @@
 
     <!-- favicon.ico and apple-touch-icon.png in the root directory -->
 
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="../style/style.css">
 
     <script type="text/javascript" src="//use.typekit.net/nxm7llc.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
@@ -114,11 +114,68 @@
     <li class="linkedin-link"><a href="https://www.linkedin.com/company/mashwork" target="_blank"><img src="http://mashwork.com/canvs/images/linkedin-icon.svg" class="social-icon"/></a></li>
   </ul>
   <p class="copyright">&copy; 2014 Mashwork, Inc. &nbsp;•&nbsp; All rights reserved. &nbsp;•&nbsp; <a href="/privacy" target="_blank">Privacy Policy</a></p>
-  <p class="contact-info"><a href="https://goo.gl/maps/slKfo" target="_blank">11 W. 25th St, 7th Fl, New York, NY 10010</a>• <a href="tel:1-646-201-9124">646-201-9124</a>• <a href="/about">About Us </a>• <a href="http://mashwork.com/blog">New</a></p><a href="http://wearemadeinny.com/" class="made-in-ny"><img src="http://mashwork.com/canvs/images/logos/made-in-ny-logo.svg"/></a>
+  <p class="contact-info"><a href="https://goo.gl/maps/slKfo" target="_blank">11 W. 25th St, 7th Fl, New York, NY 10010</a>• <a href="tel:1-646-201-9124">646-201-9124</a>• <a href="/about">About Us </a>• <a href="http://mashwork.com/blog">News</a></p><a href="http://wearemadeinny.com/" class="made-in-ny"><img src="http://mashwork.com/canvs/images/logos/made-in-ny-logo.svg"/></a>
 </footer>
+    
+<div tabindex="-1" role="dialog" aria-labelledby="contactModalTitle" aria-hidden="true" class="contactModal modal fade">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <button type="button" data-dismiss="modal" aria-hidden="true" class="close">×</button>
+      <div class="modal-body">
+        <div class="modal-center-wrap">
+          <div class="modal-form-header">
+            <h1 id="contactModalTitle" class="modal-title">Contact us for a Canvs demo.</h1>
+            <p class="section-description">All fields are mandatory.</p>
+          </div>
+          <div id="mc_embed_signup" class="canvsContactForm">
+            <form id="mc-embedded-subscribe-form" action="http://mashwork.us6.list-manage.com/subscribe/post?u=27226eff753800aa4ae740776&amp;id=bfb67acc2a" method="post" name="mc-embedded-subscribe-form" target="_blank" novalidate="" class="validate form-horizontal">
+              <div class="form-group form-name-group">  
+                <div class="mc-field-group">
+                  <label for="mce-FNAME">First Name </label>
+                  <input id="mce-FNAME" type="text" value="" name="FNAME" placeholder="First Name" class="required form-control"/>
+                </div>
+                <div class="mc-field-group">
+                  <label for="mce-LNAME">Last Name </label>
+                  <input id="mce-LNAME" type="text" value="" name="LNAME" placeholder="Last Name" class="required form-control"/>
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="mc-field-group">
+                  <label for="mce-EMAIL">Email Address </label>
+                  <input id="mce-EMAIL" type="email" value="" name="EMAIL" placeholder="Email" class="required email form-control"/>
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="mc-field-group">
+                  <label for="mce-COMPANY">Company &amp; Position </label>
+                  <input id="mce-COMPANY" type="text" value="" name="COMPANY" placeholder="Company &amp; Position" class="required form-control"/>
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="mc-field-group">
+                  <label for="mce-PHONE">Phone </label>
+                  <input id="mce-PHONE" type="tel" value="" name="PHONE" placeholder="Phone" class="required form-control"/>
+                </div>
+              </div>
+              <div id="mce-responses" class="clear">
+                <div id="mce-error-response" style="display:none" class="response"></div>
+                <div id="mce-success-response" style="display:none" class="response"></div>
+              </div>
+              <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+              <div style="position: absolute; left: -5000px;">
+                <input type="text" name="b_27226eff753800aa4ae740776_bfb67acc2a" value=""/>
+              </div>
+              <button id="mc-embedded-subscribe" type="submit" value="Subscribe" name="subscribe" class="action-btn canvsContactform-submit">Request demo</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="bower_components/html5-boilerplate/js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
-    <script src="scripts/main-min.js"></script>
+    <script src="../scripts/main-min.js"></script>
 
     <!-- Google Analytics -->
 <script>
