--- a/app/index.html
+++ b/app/index.html
@@ -25,8 +25,8 @@
     <![endif]-->
 
     
-<header class="hero-header"><a href="http://canvs.tv/login" class="canvs-login">Login<span class="login-icon"><img src="images/user-icon.svg"/></span></a>
-  <div class="container">
+<header class="hero-header">
+  <div class="container"><a href="http://canvs.tv/login" class="canvs-login">Login<span class="login-icon"><img src="images/user-icon.svg"/></span></a>
     <div class="hero-header-content">
       <div class="branding-wrap">
         <p class="logo-introducing">Introducing</p><a href="/" class="canvs-logo-link"><img src="images/logos/canvs-logo-white.svg" class="canvs-logo"/>
