Fixed duplicate copy, fixed specificity of mail chimp label function

--- a/app/about/index.html
+++ b/app/about/index.html
@@ -47,7 +47,7 @@
         <div class="content-box core-beliefs-box nuance">
           <div class="icon-circle"><img src="../images/nuance-icon.svg" class="core-beliefs-illustration"/></div>
           <h2>Nuance</h2>
-          <p>Entertainment content is complex—that’s why we don’t believe in positive, negative, and neutral sentiment. Canvs uncovers nuanced audience emotions and lets you decide what they mean for your show.</p>
+          <p>Entertainment content is much more complex than the positive, negative, and neutral sentiment other platforms give you. Canvs reveals the complex emotions people express to give you sophisticated insights into your content.</p>
         </div>
       </div>
     </div>
@@ -117,55 +117,53 @@
   <p class="contact-info"><a href="https://goo.gl/maps/slKfo" target="_blank">11 W. 25th St, 7th Fl, New York, NY 10010</a>• <a href="tel:1-646-201-9124">646-201-9124</a>• <a href="/about">About Us </a>• <a href="http://mashwork.com/blog" target="_blank">News</a></p><a href="http://wearemadeinny.com/" target="_blank" class="made-in-ny"><img src="http://mashwork.com/canvs/images/logos/made-in-ny-logo.svg"/></a>
 </footer>
     
-<div tabindex="-1" role="dialog" aria-labelledby="contactModalTitle" aria-hidden="true" class="contactModal modal fade">
+<div tabindex="-1" role="dialog" aria-labelledby="contactModalTitle" aria-hidden="true" class="contactModal modal fade canvs-demo-form-modal">
   <div class="modal-dialog">
     <div class="modal-content">
-      <button type="button" data-dismiss="modal" aria-hidden="true" class="close">×</button>
+      <div class="modal-controls-wrap">
+        <button type="button" data-dismiss="modal" aria-hidden="true" class="close">×</button>
+      </div>
       <div class="modal-body">
         <div class="modal-center-wrap">
           <div class="modal-form-header">
-            <h1 id="contactModalTitle" class="modal-title">Contact us for a Canvs demo.</h1>
+            <h1 id="contactModalTitle" class="modal-title canvs-demo-form-title">Contact us for a Canvs demo.</h1>
             <p class="section-description">All fields are mandatory.</p>
           </div>
-          <div id="mc_embed_signup" class="canvsContactForm">
-            <form id="mc-embedded-subscribe-form" action="http://mashwork.us6.list-manage.com/subscribe/post?u=27226eff753800aa4ae740776&amp;id=bfb67acc2a" method="post" name="mc-embedded-subscribe-form" target="_blank" novalidate="" class="validate form-horizontal">
+          <div id="mc_embed_signup" class="canvs-demo-form-wrap">
+            <form id="canvs-demo-form" action="http://mashwork.us6.list-manage.com/subscribe/post-json?u=27226eff753800aa4ae740776&amp;id=bfb67acc2a&amp;c=?" method="post" name="canvs-demo-form" novalidate="" class="validate form-horizontal">
               <div class="form-group form-name-group">  
                 <div class="mc-field-group">
                   <label for="mce-FNAME">First Name </label>
-                  <input id="mce-FNAME" type="text" value="" name="FNAME" placeholder="First Name" class="required form-control"/>
+                  <input id="mce-FNAME" type="text" value="" name="FNAME" placeholder="First Name" required="required" class="required form-control"/>
                 </div>
                 <div class="mc-field-group">
                   <label for="mce-LNAME">Last Name </label>
-                  <input id="mce-LNAME" type="text" value="" name="LNAME" placeholder="Last Name" class="required form-control"/>
+                  <input id="mce-LNAME" type="text" value="" name="LNAME" placeholder="Last Name" required="required" class="required form-control"/>
                 </div>
               </div>
               <div class="form-group">
                 <div class="mc-field-group">
                   <label for="mce-EMAIL">Email Address </label>
-                  <input id="mce-EMAIL" type="email" value="" name="EMAIL" placeholder="Email" class="required email form-control"/>
+                  <input id="mce-EMAIL" type="email" value="" name="EMAIL" placeholder="Email" required="required" class="required email form-control"/>
                 </div>
               </div>
               <div class="form-group">
                 <div class="mc-field-group">
                   <label for="mce-COMPANY">Company &amp; Position </label>
-                  <input id="mce-COMPANY" type="text" value="" name="COMPANY" placeholder="Company &amp; Position" class="required form-control"/>
+                  <input id="mce-COMPANY" type="text" value="" name="COMPANY" placeholder="Company &amp; Position" required="required" class="required form-control"/>
                 </div>
               </div>
               <div class="form-group">
                 <div class="mc-field-group">
                   <label for="mce-PHONE">Phone </label>
-                  <input id="mce-PHONE" type="tel" value="" name="PHONE" placeholder="Phone" class="required form-control"/>
+                  <input id="mce-PHONE" type="tel" value="" name="PHONE" placeholder="Phone" required="required" class="required form-control"/>
                 </div>
-              </div>
-              <div id="mce-responses" class="clear">
-                <div id="mce-error-response" style="display:none" class="response"></div>
-                <div id="mce-success-response" style="display:none" class="response"></div>
               </div>
               <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
               <div style="position: absolute; left: -5000px;">
                 <input type="text" name="b_27226eff753800aa4ae740776_bfb67acc2a" value=""/>
               </div>
-              <button id="mc-embedded-subscribe" type="submit" value="Subscribe" name="subscribe" class="action-btn canvsContactform-submit">Request demo</button>
+              <input id="mc-embedded-subscribe" type="submit" value="Request demo" name="subscribe" class="action-btn canvs-demo-form-submit"/>
             </form>
           </div>
         </div>
